# salary_prediction

./: .gitignore  README.md  docker-compose.yml  project draft.ipynb  project.ipynb  project_final.ipynb  salary_df.csv  salary_regression.ipynb  setup
1/: 1.txt
backend/: .dockerignore  .env.local  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  salary_regression.ipynb
backend/database/: cleaned_salary_data.csv  database.py  init_database.py  salary_prediction.db  salary_regression.ipynb
backend/my_package/: data_cleansing.py  data_extract_func.py  data_predict.py  data_preprocessing.py  data_spliting.py  data_training.py  data_visualization.py
backend/non_poly/: oracle.json
backend/non_poly/trial_0/: checkpoint.weights.h5  trial.json
best_performance/: NN_model.keras
frontend/: .dockerignore  .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.js  App.test.jsx  index.js
frontend/src/api/: axiosInstance.jsx  dataService.jsx  deleteData.jsx  fetchData.jsx
frontend/src/components/: AgeYearsModal.jsx  ErrorPredict.jsx  InputForm.jsx  LoadingResult.jsx  ModalTemplate.jsx  MyCarousel.css  MyCarousel.jsx  OutputSection.css  OutputSection.jsx  SelectInput.jsx  TermsCheckbox.jsx  TermsModal.jsx  Toast.jsx
frontend/src/hooks/: useToast.jsx
models/: NN_Salary_prediction_model.h5  NN_Salary_prediction_model.keras  NN_model.keras  nn_model.weights.h5  nn_model_architecture.json
poly/: oracle.json
poly/trial_0/: trial.json
readme_images/: setup_ip_image
(+15 files in other folders)
