[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "category-encoders>=2.8.1",
    "fastapi>=0.115.13",
    "keras>=3.10.0",
    "lightgbm>=4.6.0",
    "pandas>=2.3.0",
    "scikit-learn==1.6.1",
    "scikit-optimize>=0.10.2",
    "scipy==1.15.1",
    "statsmodels==0.14.4",
    "xgboost>=3.0.2",
    "tensorflow==2.17.0",
    "keras-tuner>=1.4.7",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.34.3",
]
